# qr/qr.back/docs/swagger.json
@@ -3,30 +3,21 @@
     "info": {
         "description": "API для оценки состояния туалетов по QR кодам",
         "title": "QR Toilet API",
-        "termsOfService": "http://swagger.io/terms/",
-        "contact": {
-            "name": "API Support",
-            "email": "support@qr-toilet.com"
-        },
-        "license": {
-            "name": "MIT",
-            "url": "https://opensource.org/licenses/MIT"
-        },
+        "contact": {},
         "version": "1.0"
     },
     "host": "localhost:8000",
-    "basePath": "/api",
+    "basePath": "/",
     "paths": {
         "/api/toilets": {
             "get": {
-                "description": "Возвращает массив всех туалетов",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "toilets"
                 ],
-                "summary": "Получить список всех туалетов",
+                "summary": "Получить список туалетов",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -36,61 +27,19 @@
                                 "$ref": "#/definitions/models.Toilet"
                             }
                         }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/api/toilets/ratings/{ratingId}": {
-            "delete": {
-                "description": "Удаляет оценку по ID",
-                "tags": [
-                    "ratings"
-                ],
-                "summary": "Удалить оценку",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "ID оценки",
-                        "name": "ratingId",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "204": {
-                        "description": "No Content"
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
                     }
                 }
             }
         },
         "/api/toilets/{id}/ratings": {
             "get": {
-                "description": "Возвращает все оценки для указанного туалета",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "ratings"
                 ],
-                "summary": "Получить все оценки туалета",
+                "summary": "Получить оценки туалета",
                 "parameters": [
                     {
                         "type": "integer",
@@ -109,20 +58,10 @@
                                 "$ref": "#/definitions/models.ToiletRating"
                             }
                         }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
                     }
                 }
             },
             "post": {
-                "description": "Добавляет новую оценку для указанного туалета",
                 "consumes": [
                     "application/json"
                 ],
@@ -156,24 +95,6 @@
                         "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/models.ToiletRating"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
                         }
                     }
                 }
