# qr/qr.web/src/features/lib/apis/RatingsApi.ts
@@ -5,7 +5,7 @@
  * API для оценки состояния туалетов по QR кодам
  *
  * The version of the OpenAPI document: 1.0
- * Contact: support@qr-toilet.com
+ * 
  *
  * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
  * https://openapi-generator.tech
@@ -19,6 +19,10 @@ import {
     ModelsToiletRatingToJSON,
 } from '../models/ModelsToiletRating';
 
+export interface ApiToiletsIdRatingsGetRequest {
+    id: number;
+}
+
 export interface ApiToiletsIdRatingsPostRequest {
     id: number;
     rating: ModelsToiletRating;
@@ -28,6 +32,51 @@ export interface ApiToiletsIdRatingsPostRequest {
  * 
  */
 export class RatingsApi extends runtime.BaseAPI {
+
+    /**
+     * Creates request options for apiToiletsIdRatingsGet without sending the request
+     */
+    async apiToiletsIdRatingsGetRequestOpts(requestParameters: ApiToiletsIdRatingsGetRequest): Promise<runtime.RequestOpts> {
+        if (requestParameters['id'] == null) {
+            throw new runtime.RequiredError(
+                'id',
+                'Required parameter "id" was null or undefined when calling apiToiletsIdRatingsGet().'
+            );
+        }
+
+        const queryParameters: any = {};
+
+        const headerParameters: runtime.HTTPHeaders = {};
+
+
+        let urlPath = `/api/toilets/{id}/ratings`;
+        urlPath = urlPath.replace('{id}', encodeURIComponent(String(requestParameters['id'])));
+
+        return {
+            path: urlPath,
+            method: 'GET',
+            headers: headerParameters,
+            query: queryParameters,
+        };
+    }
+
+    /**
+     * Получить оценки туалета
+     */
+    async apiToiletsIdRatingsGetRaw(requestParameters: ApiToiletsIdRatingsGetRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<Array<ModelsToiletRating>>> {
+        const requestOptions = await this.apiToiletsIdRatingsGetRequestOpts(requestParameters);
+        const response = await this.request(requestOptions, initOverrides);
+
+        return new runtime.JSONApiResponse(response, (jsonValue) => jsonValue.map(ModelsToiletRatingFromJSON));
+    }
+
+    /**
+     * Получить оценки туалета
+     */
+    async apiToiletsIdRatingsGet(requestParameters: ApiToiletsIdRatingsGetRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<Array<ModelsToiletRating>> {
+        const response = await this.apiToiletsIdRatingsGetRaw(requestParameters, initOverrides);
+        return await response.value();
+    }
 
     /**
      * Creates request options for apiToiletsIdRatingsPost without sending the request
@@ -67,7 +116,6 @@ export class RatingsApi extends runtime.BaseAPI {
     }
 
     /**
-     * Добавляет новую оценку для указанного туалета
      * Добавить оценку туалету
      */
     async apiToiletsIdRatingsPostRaw(requestParameters: ApiToiletsIdRatingsPostRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<ModelsToiletRating>> {
@@ -78,7 +126,6 @@ export class RatingsApi extends runtime.BaseAPI {
     }
 
     /**
-     * Добавляет новую оценку для указанного туалета
      * Добавить оценку туалету
      */
     async apiToiletsIdRatingsPost(requestParameters: ApiToiletsIdRatingsPostRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<ModelsToiletRating> {
