# qr/qr.web/src/features/lib/apis/ToiletsApi.ts
@@ -5,7 +5,7 @@
  * API для оценки состояния туалетов по QR кодам
  *
  * The version of the OpenAPI document: 1.0
- * Contact: support@qr-toilet.com
+ * 
  *
  * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
  * https://openapi-generator.tech
@@ -18,23 +18,6 @@ import {
     ModelsToiletFromJSON,
     ModelsToiletToJSON,
 } from '../models/ModelsToilet';
-
-export interface ApiToiletsIdDeleteRequest {
-    id: number;
-}
-
-export interface ApiToiletsIdGetRequest {
-    id: number;
-}
-
-export interface ApiToiletsIdPutRequest {
-    id: number;
-    updates: { [key: string]: any; };
-}
-
-export interface ApiToiletsPostRequest {
-    toilet: ModelsToilet;
-}
 
 /**
  * 
@@ -61,8 +44,7 @@ export class ToiletsApi extends runtime.BaseAPI {
     }
 
     /**
-     * Возвращает массив всех туалетов, отсортированных по рейтингу
-     * Получить список всех туалетов
+     * Получить список туалетов
      */
     async apiToiletsGetRaw(initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<Array<ModelsToilet>>> {
         const requestOptions = await this.apiToiletsGetRequestOpts();
@@ -72,210 +54,10 @@ export class ToiletsApi extends runtime.BaseAPI {
     }
 
     /**
-     * Возвращает массив всех туалетов, отсортированных по рейтингу
-     * Получить список всех туалетов
+     * Получить список туалетов
      */
     async apiToiletsGet(initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<Array<ModelsToilet>> {
         const response = await this.apiToiletsGetRaw(initOverrides);
-        return await response.value();
-    }
-
-    /**
-     * Creates request options for apiToiletsIdDelete without sending the request
-     */
-    async apiToiletsIdDeleteRequestOpts(requestParameters: ApiToiletsIdDeleteRequest): Promise<runtime.RequestOpts> {
-        if (requestParameters['id'] == null) {
-            throw new runtime.RequiredError(
-                'id',
-                'Required parameter "id" was null or undefined when calling apiToiletsIdDelete().'
-            );
-        }
-
-        const queryParameters: any = {};
-
-        const headerParameters: runtime.HTTPHeaders = {};
-
-
-        let urlPath = `/api/toilets/{id}`;
-        urlPath = urlPath.replace('{id}', encodeURIComponent(String(requestParameters['id'])));
-
-        return {
-            path: urlPath,
-            method: 'DELETE',
-            headers: headerParameters,
-            query: queryParameters,
-        };
-    }
-
-    /**
-     * Удаляет туалет по ID (мягкое удаление)
-     * Удалить туалет
-     */
-    async apiToiletsIdDeleteRaw(requestParameters: ApiToiletsIdDeleteRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<void>> {
-        const requestOptions = await this.apiToiletsIdDeleteRequestOpts(requestParameters);
-        const response = await this.request(requestOptions, initOverrides);
-
-        return new runtime.VoidApiResponse(response);
-    }
-
-    /**
-     * Удаляет туалет по ID (мягкое удаление)
-     * Удалить туалет
-     */
-    async apiToiletsIdDelete(requestParameters: ApiToiletsIdDeleteRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<void> {
-        await this.apiToiletsIdDeleteRaw(requestParameters, initOverrides);
-    }
-
-    /**
-     * Creates request options for apiToiletsIdGet without sending the request
-     */
-    async apiToiletsIdGetRequestOpts(requestParameters: ApiToiletsIdGetRequest): Promise<runtime.RequestOpts> {
-        if (requestParameters['id'] == null) {
-            throw new runtime.RequiredError(
-                'id',
-                'Required parameter "id" was null or undefined when calling apiToiletsIdGet().'
-            );
-        }
-
-        const queryParameters: any = {};
-
-        const headerParameters: runtime.HTTPHeaders = {};
-
-
-        let urlPath = `/api/toilets/{id}`;
-        urlPath = urlPath.replace('{id}', encodeURIComponent(String(requestParameters['id'])));
-
-        return {
-            path: urlPath,
-            method: 'GET',
-            headers: headerParameters,
-            query: queryParameters,
-        };
-    }
-
-    /**
-     * Возвращает информацию о туалете по его ID
-     * Получить туалет по ID
-     */
-    async apiToiletsIdGetRaw(requestParameters: ApiToiletsIdGetRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<ModelsToilet>> {
-        const requestOptions = await this.apiToiletsIdGetRequestOpts(requestParameters);
-        const response = await this.request(requestOptions, initOverrides);
-
-        return new runtime.JSONApiResponse(response, (jsonValue) => ModelsToiletFromJSON(jsonValue));
-    }
-
-    /**
-     * Возвращает информацию о туалете по его ID
-     * Получить туалет по ID
-     */
-    async apiToiletsIdGet(requestParameters: ApiToiletsIdGetRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<ModelsToilet> {
-        const response = await this.apiToiletsIdGetRaw(requestParameters, initOverrides);
-        return await response.value();
-    }
-
-    /**
-     * Creates request options for apiToiletsIdPut without sending the request
-     */
-    async apiToiletsIdPutRequestOpts(requestParameters: ApiToiletsIdPutRequest): Promise<runtime.RequestOpts> {
-        if (requestParameters['id'] == null) {
-            throw new runtime.RequiredError(
-                'id',
-                'Required parameter "id" was null or undefined when calling apiToiletsIdPut().'
-            );
-        }
-
-        if (requestParameters['updates'] == null) {
-            throw new runtime.RequiredError(
-                'updates',
-                'Required parameter "updates" was null or undefined when calling apiToiletsIdPut().'
-            );
-        }
-
-        const queryParameters: any = {};
-
-        const headerParameters: runtime.HTTPHeaders = {};
-
-        headerParameters['Content-Type'] = 'application/json';
-
-
-        let urlPath = `/api/toilets/{id}`;
-        urlPath = urlPath.replace('{id}', encodeURIComponent(String(requestParameters['id'])));
-
-        return {
-            path: urlPath,
-            method: 'PUT',
-            headers: headerParameters,
-            query: queryParameters,
-            body: requestParameters['updates'],
-        };
-    }
-
-    /**
-     * Обновляет информацию о туалете по ID
-     * Обновить туалет
-     */
-    async apiToiletsIdPutRaw(requestParameters: ApiToiletsIdPutRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<ModelsToilet>> {
-        const requestOptions = await this.apiToiletsIdPutRequestOpts(requestParameters);
-        const response = await this.request(requestOptions, initOverrides);
-
-        return new runtime.JSONApiResponse(response, (jsonValue) => ModelsToiletFromJSON(jsonValue));
-    }
-
-    /**
-     * Обновляет информацию о туалете по ID
-     * Обновить туалет
-     */
-    async apiToiletsIdPut(requestParameters: ApiToiletsIdPutRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<ModelsToilet> {
-        const response = await this.apiToiletsIdPutRaw(requestParameters, initOverrides);
-        return await response.value();
-    }
-
-    /**
-     * Creates request options for apiToiletsPost without sending the request
-     */
-    async apiToiletsPostRequestOpts(requestParameters: ApiToiletsPostRequest): Promise<runtime.RequestOpts> {
-        if (requestParameters['toilet'] == null) {
-            throw new runtime.RequiredError(
-                'toilet',
-                'Required parameter "toilet" was null or undefined when calling apiToiletsPost().'
-            );
-        }
-
-        const queryParameters: any = {};
-
-        const headerParameters: runtime.HTTPHeaders = {};
-
-        headerParameters['Content-Type'] = 'application/json';
-
-
-        let urlPath = `/api/toilets`;
-
-        return {
-            path: urlPath,
-            method: 'POST',
-            headers: headerParameters,
-            query: queryParameters,
-            body: ModelsToiletToJSON(requestParameters['toilet']),
-        };
-    }
-
-    /**
-     * Добавляет новый туалет в базу данных
-     * Создать новый туалет
-     */
-    async apiToiletsPostRaw(requestParameters: ApiToiletsPostRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<ModelsToilet>> {
-        const requestOptions = await this.apiToiletsPostRequestOpts(requestParameters);
-        const response = await this.request(requestOptions, initOverrides);
-
-        return new runtime.JSONApiResponse(response, (jsonValue) => ModelsToiletFromJSON(jsonValue));
-    }
-
-    /**
-     * Добавляет новый туалет в базу данных
-     * Создать новый туалет
-     */
-    async apiToiletsPost(requestParameters: ApiToiletsPostRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<ModelsToilet> {
-        const response = await this.apiToiletsPostRaw(requestParameters, initOverrides);
         return await response.value();
     }
 
